Add tenancy and catalog APIs
